[tool.poetry]
name = "data_visualization"
version = "0.1.0"
description = ""
authors = ["‘Timothy <‘Timothy.viccari@gmail.com’>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
